# wx_bgi_graphics

./: .gitignore  Building.md  CMakeLists.txt  Camera2D_Map.md  Camera3D_Map.md  DDS.md  Info.plist  InputsProcessing.md  KeyboardAndMouse.md  LICENSE  Object-Operation.md  OpenLB-Support.md  README.md  ScreenShots.md  Tests.md  Tutorial.md  VisualAids.md  WxWidgets.md  link13758.res  linkfiles13758.res  orbit_out.txt  ppaslink.sh  symbol_order.fpc  wx_bgi_wx.h
.github/: copilot-instructions.md
.github/workflows/: CI.yml  embed-codefile-in-readme.yml  readme-test-embed.yml_disabled
docs/: API_REFERENCE.md  DDS.md  Doxyfile.in  DoxygenLayout.xml  DoxygenLayout.xml.bak  Object-Operation.md  WxWidgets.md  doxygen-unicode.tex  topics.tex
docs/developer-guide/: Camera2D_Map.md  Camera3D_Map.md  InputsProcessing.md  README.md  Tests.md  architecture-overview.md  documentation-pipeline.md  openlb-bridge-plan.md
docs/user-guide/: OpenLB-Support.md  README.md  ScreenShots.md  Tutorial.md  VisualAids.md  getting-started.md
examples/bgidemo-pascal/: Graph.pas  README.md  bgidemo.pas
examples/cpp/: bgi_api_coverage.cpp  test_dds_cam2d_yz.cpp  test_dds_cam3d_persp.cpp  test_dds_clear.cpp  test_dds_csg.cpp  test_dds_deserialize.cpp  test_dds_external_attrs.cpp  test_dds_serialize.cpp  test_field_vis.cpp  test_input_bypass.cpp  test_input_hooks.cpp  test_multi_scene.cpp  test_openlb_bridge_materialize_2d.cpp  test_solids.cpp  wxbgi_affine_transform_demo.cpp  wxbgi_camera_demo.cpp  wxbgi_input_hooks.cpp  wxbgi_keyboard_queue.cpp  wxbgi_multi_scene_demo.cpp  wxbgi_openlb_coupled_smoke.cpp  wxbgi_openlb_live_demo.cpp  wxbgi_openlb_material_preview_demo.cpp  wxbgi_set_operations_demo.cpp
examples/cpp/openlb-demo/: run_openlb_pipe_3d_demo.sh  run_openlb_pipe_3d_demo_macos.sh  run_openlb_pipe_3d_wx_slider_demo.sh  run_openlb_pipe_3d_wx_slider_demo_macos.sh  wxbgi_openlb_pipe_3d_demo.cpp  wxbgi_openlb_pipe_3d_wx_slider_demo.cpp
examples/demoFreePascal/: README.md  demo_bgi_api_coverage.pas  demo_bgi_canvas_coverage.pas  demo_bgi_wrapper.pas  demo_bgi_wrapper_gui.pas  demo_input_hooks.pas  demo_wxbgi_keyboard_queue.pas  test_input_bypass.pas  test_input_hooks.pas
examples/python/: bgi_api_coverage.py
examples/wx/: wx_bgi_3d_app.cpp  wx_bgi_3d_orbit_test.cpp  wx_bgi_app.cpp  wx_bgi_canvas_coverage_test.cpp  wx_bgi_solids_test.cpp  wx_multi_scene_demo.cpp
src/: bgi_api.cpp  bgi_camera.cpp  bgi_camera.h  bgi_camera_api.cpp  bgi_dds.cpp  bgi_dds.h  bgi_dds_api.cpp  bgi_dds_render.cpp  bgi_dds_scene_api.cpp  bgi_dds_serial.cpp  bgi_draw.cpp  bgi_draw.h  bgi_export.cpp  bgi_field_vis.cpp  bgi_font.cpp  bgi_font.h  bgi_gl.cpp  bgi_gl.h  bgi_gl_shaders.h  bgi_image.cpp  bgi_image.h  bgi_modern_api.cpp  bgi_openlb_bridge.cpp  bgi_openlb_bridge.h  bgi_openlb_bridge_api.cpp  bgi_overlay.cpp  bgi_overlay.h  bgi_overlay_api.cpp  bgi_solid_api.cpp  bgi_solid_render.cpp  bgi_solid_render.h  bgi_state.cpp  bgi_state.h  bgi_types.h  bgi_ucs.cpp  bgi_ucs.h  bgi_ucs_api.cpp  bgi_world_api.cpp  openlb_msvc_compat.h  wx_bgi.h  (+6 more)
src/wx/: bgi_wx_standalone.cpp  wx_bgi_canvas.cpp  wx_bgi_canvas.h
tools/: capture_screenshots.cpp  generate_api_docs.py
